Fix raid trades on mobile Fix nav bar brand on mobile

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -28,12 +28,6 @@
         padding-right: 5px;
     }
 
-    .navbar-brand
-    {
-        padding-left:10px;
-        padding-right:10px;
-    }
-
     header {
         margin:0px;
     }
